tests/fsharp/typecheck/sigs/neg96.bsl

neg96.fs(13,1,13,2): typecheck error FS0256: A value must be mutable in order to mutate the contents or take the address of a value type, e.g. 'let mutable x = ...'